--- a/find-the-country/package.json
+++ b/find-the-country/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://emanuella92gomesr.github.io/find-the-country-app",
   "name": "find-the-country",
   "version": "0.1.0",
   "private": true,
@@ -19,9 +20,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject" 
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
